--- a/style-store.css
+++ b/style-store.css
@@ -39,6 +39,7 @@ h2 {
 
 h3 {
     padding: 0 0 0 3rem;
+    color: white;
 }
 
 .center {
@@ -68,6 +69,10 @@ figure {
     border-radius: 8px;
 }
 
+.product-desc {
+    color: black;
+}
+
 img {
     border-radius: 8px 8px 0 0;
     width: 100%;
@@ -83,6 +88,11 @@ ul {
 
 p {
     text-align: center;
+    color: white;
+}
+
+figcaption{
+    color: white;
 }
 
 li a {
